--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,9 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+development:
+  adapter: postgresql
+  host: localhost
+  username: user
+  database: app-dev
